--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
+        <!-- Facing issue with earlier version to change it to 1.4.3.RELEASE -->     
         <version>1.4.3.RELEASE</version>     
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
